# win-win

./: .gitignore  Cargo.toml  README.md
.github/workflows/: win-win.yml  winwin-master  winwin-master.yml
examples/: menu.rs  simple_window.rs
src/: lib.rs
src/controls/: buttons.rs  listbox.rs  listboxes.rs  mod.rs
src/id_store/: mod.rs
src/menu/: mod.rs
src/win_proc/: callbacks.rs  ext_proc.rs  mod.rs
src/window/: class.rs  dialogs.rs  filedialog.rs  mod.rs  timer_proc.rs  winbuilder.rs  window.rs
